crates/panache-parser/tests/snapshots/yaml__yaml_suite_4Q9F.snap
---
source: crates/panache-parser/tests/yaml.rs
assertion_line: 245
expression: snapshot
---
case_id: 4Q9F
input: "--- >\n ab\n cd\n \n ef\n\n\n gh\n"
has_error_contract: false
parsed_mapping_tree: true
diagnostics: []
