crates/panache-parser/tests/snapshots/yaml__yaml_suite_4RWC.snap
---
source: crates/panache-parser/tests/yaml.rs
assertion_line: 246
expression: snapshot
---
case_id: 4RWC
input: "  [1, 2, 3]  \n  "
has_error_contract: false
parsed_mapping_tree: true
diagnostics: []
