crates/panache-parser/tests/snapshots/yaml__yaml_suite_4UYU.snap
---
source: crates/panache-parser/tests/yaml.rs
expression: snapshot
---
case_id: 4UYU
input: "\"foo: bar\\\": baz\"\n"
parsed_mapping_tree: true
