crates/panache-parser/tests/snapshots/yaml__yaml_suite_4V8U.snap
---
source: crates/panache-parser/tests/yaml.rs
expression: snapshot
---
case_id: 4V8U
input: "---\nplain\\value\\with\\backslashes\n"
has_error_contract: false
parsed_mapping_tree: true
diagnostics: []
