crates/panache-parser/tests/snapshots/yaml__yaml_suite_4ZYM.snap
---
source: crates/panache-parser/tests/yaml.rs
expression: snapshot
---
case_id: 4ZYM
input: "plain: text\n  lines\nquoted: \"text\n  \tlines\"\nblock: |\n  text\n   \tlines\n"
has_error_contract: false
parsed_mapping_tree: true
diagnostics: []
