crates/panache-parser/tests/snapshots/yaml__yaml_suite_52DL.snap
---
source: crates/panache-parser/tests/yaml.rs
assertion_line: 648
expression: snapshot
---
case_id: 52DL
input: "---\n! a\n"
has_error_contract: false
parsed_mapping_tree: true
diagnostics: []
