crates/panache-parser/tests/snapshots/yaml__yaml_suite_54T7.snap
---
source: crates/panache-parser/tests/yaml.rs
expression: snapshot
---
case_id: 54T7
input: "{foo: you, bar: far}\n"
has_error_contract: false
parsed_mapping_tree: true
diagnostics: []
