crates/panache-parser/tests/snapshots/yaml__yaml_suite_55WF.snap
---
source: crates/panache-parser/tests/yaml.rs
expression: snapshot
---
case_id: 55WF
input: "---\n\"\\.\"\n"
has_error_contract: true
parsed_mapping_tree: false
diagnostics: [YAML_LEX_INVALID_DOUBLE_QUOTED_ESCAPE:invalid escape in double quoted scalar@5..6]
