crates/panache-parser/tests/snapshots/yaml__yaml_suite_58MP.snap
---
source: crates/panache-parser/tests/yaml.rs
expression: snapshot
---
case_id: 58MP
input: "{x: :x}\n"
has_error_contract: false
parsed_mapping_tree: true
diagnostics: []
